--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ $(document).ready(function(){
 	<div id="intro">
 		<div class="col-lg-12">
 			<div class="story">
-				<h1 id="introheader">Chris Manfredi<br>Designer & Front End Web Developer</h3>
+				<h1 id="introheader">Chris Manfredi<br>Web Developer & Designer</h3>
 	    	</div>
 	    </div>
 	</div>
