--- a/index.html
+++ b/index.html
@@ -39,8 +39,15 @@ $(document).ready(function(){
 	<div id="intro">
 		<div class="col-lg-12">
 			<div class="story">
-				<h1 id="introheader">Chris Manfredi<br>Web Developer & Designer</h3>
-	    	</div>
+			<div id="clouds">
+				<h1> Chris Manfredi </h1><div class="cloud x1"></div>
+				<!-- Time for multiple clouds to dance around -->
+				<div class="cloud x2">Chris Manfredi</div>
+				<div class="cloud x3"></div>
+				<div class="cloud x4"></div>
+				<div class="cloud x5"></div>
+				</div>
+			</div>
 	    </div>
 	</div>
 </div>
@@ -99,7 +106,6 @@ $(document).ready(function(){
 <div class="row">
 	<div id="third">
 		<div class="story">
-			<h2> My Work </h2>
 			<!-- <div class="col-lg-6">
 	  			<a href="http://www.cagethegreatmusic.com"><img src="img/cagesite.png" class="mywork"></a>
 	  			<a href="http://www.cagethegreatmusic.com" class="myworklink"> Cage The Great </a>
