Plane and CSS Clouds

--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@ $(document).ready(function(){
 		<div class="col-lg-12">
 			<div class="story">
 			<div id="clouds">
-				<h1> Chris Manfredi </h1><div class="cloud x1"></div>
+				<h1 id="name"> Chris Manfredi </h1><div class="cloud x1"></div>
 				<!-- Time for multiple clouds to dance around -->
-				<div class="cloud x2">Chris Manfredi</div>
+				<h1 id="name"> Web Developer & Designer </h1><div class="cloud x2"></div>
 				<div class="cloud x3"></div>
 				<div class="cloud x4"></div>
 				<div class="cloud x5"></div>
+				<div class="cloud x6"></div>
+				<div class="cloud x7"></div>
+				<div class="cloud x8"></div>
+				<div class="cloud x9"></div>
+				<div class="cloud x10"></div>
 				</div>
 			</div>
 	    </div>
@@ -90,7 +95,6 @@ $(document).ready(function(){
         
           </ul>
         </li>
-      </ul>
     </div><!-- /.navbar-collapse -->
   </div>
 </nav>
@@ -99,6 +103,9 @@ $(document).ready(function(){
 <div class="row">
 	<div id="second">
 		<div class="story">
+			<div class="plane">
+				<img src="img/soloplane.png">
+			</div>
 	        </div>
 	    </div> <!--.story-->
 	</div> <!--#second-->
